[package]
name = "ferreline"
version = "0.1.0-alpha.6"
edition = "2024"
license = "MIT"
description = "Rust library for interop with game Celeste"
readme = "README.md"
repository = "https://github.com/NewYearPrism/Ferreline.git"

[dependencies]
allocator-api2 = "0.2.21"
derive_more = { version = "2.0.1", default-features = false, features = [
    "error",
    "try_from",
    "deref",
] }
dotnet-io-binary = "0.1.0-alpha"
hashbrown = "0.16.1"
serde = { version = "1.0.228", optional = true }
serde-untagged = { version = "0.1.9", optional = true }

[dev-dependencies]
bumpalo = { version = "3.19.0", features = ["allocator-api2"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
thread_local_allocator = { version = "0.1.0-alpha.1", features = ["bumpalo"] }
serde_json = "1.0.145"

[features]
serde = ["dep:serde", "serde/derive", "allocator-api2/serde", "hashbrown/serde", "dep:serde-untagged"]

[[test]]
name = "test_serde"
required-features = ["serde"]
