[package]
name = "ferreline"
version = "0.1.0-alpha.7"
edition = "2024"
license = "MIT"
description = "Rust library for interop with game Celeste"
readme = "README.md"
repository = "https://github.com/NewYearPrism/Ferreline.git"

[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = [
    "std",
    "try_from",
    "deref",
] }
dotnet-io-binary = "0.1.0-alpha"
serde = { version = "1.0.228", optional = true }
serde-untagged = { version = "0.1.9", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.100"
serde_json = "1.0.145"
ron = "0.12.0"
#serde-xml-rs = "0.8.2"

[features]
serde = ["dep:serde", "serde/derive", "dep:serde-untagged"]

[[test]]
name = "test_serde"
required-features = ["serde"]
